# python-emgregs

./: .bumpversion.cfg  .gitignore  LICENSE  README  README.md  main_emg.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytestPR.yml
emgregs/: __init__.py  emg_reg.py  flare_reg.py  function_emg__reg.py  function_simulation.py  function_try__flare.py  simulation.py
test/: test_main_emg.py
